--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^0.14.0",
+    "@google/generative-ai": "^0.24.1",
     "@tailwindcss/vite": "^4.1.6",
     "@types/pdfjs-dist": "^2.10.378",
     "pdfjs-dist": "^5.2.133",
