--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@google/generative-ai": "^0.24.1",
     "@tailwindcss/vite": "^4.1.6",
     "@types/pdfjs-dist": "^2.10.378",
+    "highlight.js": "^11.11.1",
     "pdfjs-dist": "^5.2.133",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-sanitize": "^6.0.0",
